@@ -20,7 +20,6 @@ import com.google.auth.oauth2.AccessToken;
 import com.google.auth.oauth2.GoogleCredentials;
 import com.google.auth.oauth2.IdentityPoolCredentials;
 import com.google.auth.oauth2.ImpersonatedCredentials;
-import org.apache.nifi.components.AllowableValue;
 import org.apache.nifi.components.ConfigVerificationResult;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.PropertyValue;
@@ -29,7 +28,6 @@ import org.apache.nifi.controller.ConfigurationContext;
 import org.apache.nifi.dbcp.api.DatabasePasswordProvider;
 import org.apache.nifi.dbcp.api.DatabasePasswordRequestContext;
 import org.apache.nifi.gcp.credentials.service.GCPCredentialsService;
-import org.apache.nifi.logging.ComponentLog;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.util.LogMessage;
@@ -39,15 +37,13 @@ import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mockito;
 import org.slf4j.helpers.MessageFormatter;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Field;
+import java.lang.reflect.Method;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -61,15 +57,10 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Stream;
 
 import static org.apache.nifi.components.ConfigVerificationResult.Outcome.FAILED;
 import static org.apache.nifi.components.ConfigVerificationResult.Outcome.SUCCESSFUL;
-import static org.apache.nifi.processors.gcp.cloudsql.GcpCloudSqlIamDatabasePasswordProvider.DATABASE_TYPE;
-import static org.apache.nifi.processors.gcp.cloudsql.GcpCloudSqlIamDatabasePasswordProvider.FAILED_PASSWORD_MESSAGE;
 import static org.apache.nifi.processors.gcp.cloudsql.GcpCloudSqlIamDatabasePasswordProvider.GCP_CREDENTIALS_PROVIDER_SERVICE;
-import static org.apache.nifi.processors.gcp.cloudsql.GcpCloudSqlIamDatabasePasswordProvider.MALFORMED_MYSQL_JDBC_URL_MESSAGE;
-import static org.apache.nifi.processors.gcp.cloudsql.GcpCloudSqlIamDatabasePasswordProvider.MALFORMED_SSLMODE_MESSAGE;
 import static org.apache.nifi.processors.gcp.cloudsql.GcpCloudSqlIamDatabasePasswordProvider.SQLSERVICE_LOGIN_SCOPE;
 import static org.apache.nifi.processors.gcp.cloudsql.GcpCloudSqlIamDatabasePasswordProvider.VERIFY_CREDENTIALS_UNAVAILABLE;
 import static org.apache.nifi.processors.gcp.cloudsql.GcpCloudSqlIamDatabasePasswordProvider.VERIFY_IMPERSONATION_REQUIRED;
@@ -94,12 +85,9 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
 
     private static final String CREDENTIALS_SERVICE_ID = "gcpCredentials";
     private static final String PASSWORD_PROVIDER_ID = "cloudSqlIamProvider";
-    private static final String POSTGRES_DRIVER_CLASS = "org.postgresql.Driver";
-    private static final String MYSQL_DRIVER_CLASS = "com.mysql.cj.jdbc.Driver";
+    private static final String DRIVER_CLASS = "org.postgresql.Driver";
     private static final String DATABASE_USER = "service-account@test-project.iam";
-    private static final String MYSQL_DATABASE_USER = "service-account";
-    private static final String JDBC_URL = "jdbc:postgresql://example:5432/database?sslmode=require";
-    private static final String MYSQL_JDBC_URL = "jdbc:mysql://example:3306/database?sslMode=REQUIRED";
+    private static final String JDBC_URL = "jdbc:postgresql://example:5432/database";
     private static final String TOKEN_VALUE = "cloud-sql-token";
     private static final String REFRESHED_TOKEN_VALUE = "refreshed-cloud-sql-token";
     private static final String LEAK_SENTINEL = "sentinel-token-value";
@@ -114,15 +102,12 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
     }
 
     @Test
-    void testDatabaseTypeDescriptorSupportsPostgreSqlAndMySqlAndDefaultsToPostgreSql() {
-        final PropertyDescriptor descriptor = DATABASE_TYPE;
+    void testSupportedPropertyDescriptorsContainOnlyCredentialsService() throws Exception {
+        final List<PropertyDescriptor> descriptors = getSupportedPropertyDescriptors(new GcpCloudSqlIamDatabasePasswordProvider());
 
-        assertEquals(CloudSqlDatabaseType.POSTGRESQL.getValue(), descriptor.getDefaultValue());
-        assertTrue(descriptor.isRequired());
-        assertEquals("Database Type", descriptor.getName());
-        assertEquals(List.of(CloudSqlDatabaseType.POSTGRESQL.getValue(), CloudSqlDatabaseType.MYSQL.getValue()), descriptor.getAllowableValues().stream()
-                .map(AllowableValue::getValue)
-                .toList());
+        assertEquals(1, descriptors.size());
+        assertEquals(GCP_CREDENTIALS_PROVIDER_SERVICE, descriptors.get(0));
+        assertTrue(descriptors.get(0).isRequired());
     }
 
     @Test
@@ -134,67 +119,24 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
 
         assertEquals(1, rootCredentials.getCreateScopedCount());
         assertEquals(List.of(SQLSERVICE_LOGIN_SCOPE), rootCredentials.getLastRequestedScopes());
-        assertEquals(CloudSqlDatabaseType.POSTGRESQL, getDatabaseType(provider));
         assertSame(scopedCredentials, getScopedCredentials(provider));
-
-        assertEquals(TOKEN_VALUE, new String(provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()))));
-        assertEquals(TOKEN_VALUE, new String(provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()))));
-
-        assertEquals(1, rootCredentials.getCreateScopedCount());
+        assertEquals(TOKEN_VALUE, new String(provider.getPassword(requestContext())));
+        assertEquals(TOKEN_VALUE, new String(provider.getPassword(requestContext())));
         assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
     }
 
     @Test
-    void testOnDisabledClearsCachedCredentialAndDatabaseType() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(scopedCredentials);
-        final TestRunner runner = configureRunner(rootCredentials);
+    void testOnDisabledClearsCachedCredential() throws Exception {
+        final TestRunner runner = configureRunner(new RootGoogleCredentials(new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15))), true);
         final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
 
         runner.disableControllerService(provider);
 
         assertNull(getScopedCredentials(provider));
-        assertNull(getDatabaseType(provider));
 
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of())));
+        final ProcessException exception = assertThrows(ProcessException.class, () -> provider.getPassword(requestContext()));
 
-        assertEquals(FAILED_PASSWORD_MESSAGE, exception.getMessage());
-        assertNull(exception.getCause());
-    }
-
-    @Test
-    void testOnEnabledCachesScopedCredentialForMySqlAndUsesMySqlValidation() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(scopedCredentials);
-        final TestRunner runner = configureRunner(rootCredentials, true, CloudSqlDatabaseType.MYSQL);
-        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
-
-        assertEquals(1, rootCredentials.getCreateScopedCount());
-        assertEquals(List.of(SQLSERVICE_LOGIN_SCOPE), rootCredentials.getLastRequestedScopes());
-        assertEquals(CloudSqlDatabaseType.MYSQL, getDatabaseType(provider));
-        assertSame(scopedCredentials, getScopedCredentials(provider));
-
-        assertEquals(TOKEN_VALUE, new String(provider.getPassword(requestContext(MYSQL_JDBC_URL, MYSQL_DATABASE_USER, MYSQL_DRIVER_CLASS, Map.of()))));
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testOnDisabledClearsCachedCredentialAndDatabaseTypeForMySql() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(scopedCredentials);
-        final TestRunner runner = configureRunner(rootCredentials, true, CloudSqlDatabaseType.MYSQL);
-        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
-
-        runner.disableControllerService(provider);
-
-        assertNull(getScopedCredentials(provider));
-        assertNull(getDatabaseType(provider));
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(MYSQL_JDBC_URL, MYSQL_DATABASE_USER, MYSQL_DRIVER_CLASS, Map.of())));
-
-        assertEquals(FAILED_PASSWORD_MESSAGE, exception.getMessage());
+        assertTrue(exception.getMessage().contains("Cloud SQL IAM"));
         assertNull(exception.getCause());
     }
 
@@ -208,30 +150,41 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
 
         assertEquals(2, results.size());
-        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, SUCCESSFUL,
-                "Resolved Database Type PostgreSQL");
-        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, SUCCESSFUL,
-                "created a Cloud SQL scoped ImpersonatedCredentials instance. Target service account impersonation is active.");
-        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, SUCCESSFUL,
-                "Acquired a non-empty Cloud SQL IAM access token for PostgreSQL");
-        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, SUCCESSFUL,
-                "verifies live subject token exchange, Google STS, and target service account impersonation");
+        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, SUCCESSFUL, "impersonation");
+        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, SUCCESSFUL, "DBCP Verify");
         assertEquals(2, rootCredentials.getCreateScopedCount());
         Mockito.verify(scopedCredentials).refreshAccessToken();
     }
 
     @Test
+    void testVerifyUsesFreshScopedCredentialWithoutMutatingEnabledState() throws Exception {
+        final TestScopedGoogleCredentials enabledScopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
+        final TestScopedGoogleCredentials verificationScopedCredentials = new TestScopedGoogleCredentials(accessToken(REFRESHED_TOKEN_VALUE, -15));
+        verificationScopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
+        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(enabledScopedCredentials, verificationScopedCredentials);
+        final TestRunner runner = configureRunner(rootCredentials);
+        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
+
+        final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
+        final char[] password = provider.getPassword(requestContext());
+
+        assertEquals(2, rootCredentials.getCreateScopedCount());
+        assertEquals(0, enabledScopedCredentials.getRefreshAccessTokenCount());
+        assertEquals(1, verificationScopedCredentials.getRefreshAccessTokenCount());
+        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, SUCCESSFUL, "Cloud SQL IAM access token");
+        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
+    }
+
+    @Test
     void testVerifyIdentityPoolCredentialsRequiresImpersonation() throws Exception {
         final IdentityPoolCredentials scopedCredentials = identityPoolCredentials(accessToken(TOKEN_VALUE, 15));
-        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(scopedCredentials);
-        final TestRunner runner = configureRunner(rootCredentials, false);
+        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), false);
         final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
 
         final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
 
         assertEquals(1, results.size());
-        assertVerificationResult(results.getFirst(), VERIFY_SCOPE_STEP, FAILED, "Resolved Database Type PostgreSQL");
-        assertVerificationResult(results.getFirst(), VERIFY_SCOPE_STEP, FAILED, VERIFY_IMPERSONATION_REQUIRED);
+        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, FAILED, VERIFY_IMPERSONATION_REQUIRED);
         Mockito.verify(scopedCredentials, Mockito.never()).refreshAccessToken();
     }
 
@@ -241,53 +194,16 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         final GcpCloudSqlIamDatabasePasswordProvider provider = new GcpCloudSqlIamDatabasePasswordProvider();
         final ConfigurationContext context = mock(ConfigurationContext.class);
         final PropertyValue credentialsPropertyValue = mock(PropertyValue.class);
-        final PropertyValue databaseTypePropertyValue = mock(PropertyValue.class);
         final GCPCredentialsService credentialsService = mock(GCPCredentialsService.class);
 
-        when(context.getProperty(DATABASE_TYPE)).thenReturn(databaseTypePropertyValue);
-        when(databaseTypePropertyValue.asAllowableValue(CloudSqlDatabaseType.class)).thenReturn(CloudSqlDatabaseType.POSTGRESQL);
         when(context.getProperty(GCP_CREDENTIALS_PROVIDER_SERVICE)).thenReturn(credentialsPropertyValue);
         when(credentialsPropertyValue.asControllerService(GCPCredentialsService.class)).thenReturn(credentialsService);
         when(credentialsService.getGoogleCredentials()).thenReturn(new RootGoogleCredentials(scopedCredentials));
 
-        final InitializationException exception = assertThrows(InitializationException.class,
-                () -> provider.onEnabled(context));
+        final InitializationException exception = assertThrows(InitializationException.class, () -> provider.onEnabled(context));
 
-        assertEquals(VERIFY_IMPERSONATION_REQUIRED, exception.getMessage());
+        assertTrue(exception.getMessage().contains("impersonation"));
         assertNull(getScopedCredentials(provider));
-        assertNull(getDatabaseType(provider));
-        Mockito.verify(scopedCredentials, Mockito.never()).refreshAccessToken();
-    }
-
-    @Test
-    void testGetPasswordRejectsIdentityPoolCredentialsBeforeRefresh() throws Exception {
-        final IdentityPoolCredentials scopedCredentials = identityPoolCredentials(accessToken(TOKEN_VALUE, -15));
-        final GcpCloudSqlIamDatabasePasswordProvider provider = new GcpCloudSqlIamDatabasePasswordProvider();
-        setDatabaseType(provider, CloudSqlDatabaseType.POSTGRESQL);
-        setScopedCredentials(provider, scopedCredentials);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of())));
-
-        assertEquals(FAILED_PASSWORD_MESSAGE, exception.getMessage());
-        assertNull(exception.getCause());
-        Mockito.verify(scopedCredentials, Mockito.never()).refreshAccessToken();
-    }
-
-    @Test
-    void testInvalidDatabaseTypePropertyIsRejectedByValidation() throws Exception {
-        final TestRunner runner = TestRunners.newTestRunner(NoOpProcessor.class);
-
-        final TestGCPCredentialsService credentialsService = new TestGCPCredentialsService(new RootGoogleCredentials(new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15))));
-        runner.addControllerService(CREDENTIALS_SERVICE_ID, credentialsService);
-        runner.enableControllerService(credentialsService);
-
-        final GcpCloudSqlIamDatabasePasswordProvider provider = new GcpCloudSqlIamDatabasePasswordProvider();
-        runner.addControllerService(PASSWORD_PROVIDER_ID, provider);
-        runner.setProperty(provider, GCP_CREDENTIALS_PROVIDER_SERVICE, CREDENTIALS_SERVICE_ID);
-        runner.setProperty(provider, DATABASE_TYPE, "SQLSERVER");
-
-        runner.assertNotValid(provider);
     }
 
     @Test
@@ -298,7 +214,22 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
 
         assertEquals(1, results.size());
-        assertVerificationResult(results.getFirst(), VERIFY_SCOPE_STEP, FAILED, VERIFY_CREDENTIALS_UNAVAILABLE);
+        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, FAILED, VERIFY_CREDENTIALS_UNAVAILABLE);
+    }
+
+    @Test
+    void testOnEnabledNullCredentialsFails() throws Exception {
+        final GcpCloudSqlIamDatabasePasswordProvider provider = new GcpCloudSqlIamDatabasePasswordProvider();
+        final ConfigurationContext context = mock(ConfigurationContext.class);
+        final PropertyValue credentialsPropertyValue = mock(PropertyValue.class);
+
+        when(context.getProperty(GCP_CREDENTIALS_PROVIDER_SERVICE)).thenReturn(credentialsPropertyValue);
+        when(credentialsPropertyValue.asControllerService(GCPCredentialsService.class)).thenReturn(null);
+
+        final InitializationException exception = assertThrows(InitializationException.class, () -> provider.onEnabled(context));
+
+        assertTrue(exception.getMessage().contains("credentials"));
+        assertNull(getScopedCredentials(provider));
     }
 
     @Test
@@ -310,50 +241,50 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
 
         assertEquals(1, results.size());
-        assertVerificationResult(results.getFirst(), VERIFY_SCOPE_STEP, FAILED, VERIFY_SCOPED_CREDENTIALS_UNAVAILABLE);
+        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, FAILED, VERIFY_SCOPED_CREDENTIALS_UNAVAILABLE);
         assertEquals(List.of(SQLSERVICE_LOGIN_SCOPE), rootCredentials.getLastRequestedScopes());
     }
 
     @Test
-    void testVerifyScopedCredentialCreationFailureIsSanitized() throws Exception {
-        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(new IllegalStateException(LEAK_SENTINEL));
-        final TestRunner runner = configureRunner(rootCredentials, false);
+    void testVerifyScopedCredentialCreationFailureIsReported() throws Exception {
+        final TestRunner runner = configureRunner(new RootGoogleCredentials(new IllegalStateException(LEAK_SENTINEL)), false);
         final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
 
         final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
 
         assertEquals(1, results.size());
-        assertVerificationResult(results.getFirst(), VERIFY_SCOPE_STEP, FAILED, VERIFY_SCOPED_CREDENTIALS_UNAVAILABLE);
-        assertFalse(results.getFirst().getExplanation().contains(LEAK_SENTINEL));
-        assertNoLogMessagesContain(runner.getControllerServiceLogger(PASSWORD_PROVIDER_ID), LEAK_SENTINEL);
+        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, FAILED, VERIFY_SCOPED_CREDENTIALS_UNAVAILABLE);
+        assertFalse(results.get(0).getExplanation().contains(LEAK_SENTINEL));
     }
 
     @Test
-    void testVerifyRefreshIOExceptionIsSanitized() throws Exception {
-        final ImpersonatedCredentials scopedCredentials = impersonatedCredentials(ioException(LEAK_SENTINEL, "com.google.auth.oauth2.ImpersonatedCredentials"));
+    void testOnEnabledScopedCredentialCreationReturningNullFails() throws Exception {
+        final GcpCloudSqlIamDatabasePasswordProvider provider = new GcpCloudSqlIamDatabasePasswordProvider();
+        final ConfigurationContext context = mock(ConfigurationContext.class);
+        final PropertyValue credentialsPropertyValue = mock(PropertyValue.class);
+        final GCPCredentialsService credentialsService = mock(GCPCredentialsService.class);
+
+        when(context.getProperty(GCP_CREDENTIALS_PROVIDER_SERVICE)).thenReturn(credentialsPropertyValue);
+        when(credentialsPropertyValue.asControllerService(GCPCredentialsService.class)).thenReturn(credentialsService);
+        when(credentialsService.getGoogleCredentials()).thenReturn(new RootGoogleCredentials((GoogleCredentials) null));
+
+        final InitializationException exception = assertThrows(InitializationException.class, () -> provider.onEnabled(context));
+
+        assertTrue(exception.getMessage().contains("scope"));
+        assertNull(getScopedCredentials(provider));
+    }
+
+    @Test
+    void testVerifyRefreshFailureIsSanitized() throws Exception {
+        final ImpersonatedCredentials scopedCredentials = impersonatedCredentials(ioException(LEAK_SENTINEL));
         final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
         final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
 
         final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
 
         assertEquals(2, results.size());
-        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, SUCCESSFUL,
-                "created a Cloud SQL scoped ImpersonatedCredentials instance. Target service account impersonation is active.");
         assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, FAILED, VERIFY_TOKEN_ACQUISITION_FAILED);
         assertFalse(results.get(1).getExplanation().contains(LEAK_SENTINEL));
-        assertNoLogMessagesContain(runner.getControllerServiceLogger(PASSWORD_PROVIDER_ID), LEAK_SENTINEL);
-    }
-
-    @Test
-    void testVerifyRefreshRuntimeFailureIsSanitized() throws Exception {
-        final ImpersonatedCredentials scopedCredentials = impersonatedCredentials(new IllegalStateException(LEAK_SENTINEL));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
-
-        final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
-
-        assertEquals(2, results.size());
-        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, FAILED, VERIFY_TOKEN_ACQUISITION_FAILED);
         assertNoLogMessagesContain(runner.getControllerServiceLogger(PASSWORD_PROVIDER_ID), LEAK_SENTINEL);
     }
 
@@ -361,9 +292,8 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
     void testVerifyNullAccessTokenFails() throws Exception {
         final ImpersonatedCredentials scopedCredentials = impersonatedCredentials((AccessToken) null);
         final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
 
-        final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
+        final List<ConfigVerificationResult> results = runner.verify(getProviderImplementation(runner), Map.of());
 
         assertEquals(2, results.size());
         assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, FAILED, VERIFY_TOKEN_MISSING);
@@ -373,101 +303,19 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
     void testVerifyBlankAccessTokenFails() throws Exception {
         final ImpersonatedCredentials scopedCredentials = impersonatedCredentials(accessToken(" ", 15));
         final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
 
-        final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
+        final List<ConfigVerificationResult> results = runner.verify(getProviderImplementation(runner), Map.of());
 
         assertEquals(2, results.size());
         assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, FAILED, VERIFY_TOKEN_MISSING);
     }
 
     @Test
-    void testVerifyUsesFreshScopedCredentialWithoutMutatingEnabledState() throws Exception {
-        final TestScopedGoogleCredentials enabledScopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestScopedGoogleCredentials verificationScopedCredentials = new TestScopedGoogleCredentials(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        verificationScopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(enabledScopedCredentials, verificationScopedCredentials);
-        final TestRunner runner = configureRunner(rootCredentials);
-        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
-
-        final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
-        final char[] password = provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()));
-
-        assertEquals(2, rootCredentials.getCreateScopedCount());
-        assertEquals(0, enabledScopedCredentials.getRefreshAccessTokenCount());
-        assertEquals(1, verificationScopedCredentials.getRefreshAccessTokenCount());
-        assertFalse(results.get(1).getExplanation().contains("subject token exchange"));
-        assertTrue(results.get(1).getExplanation().contains("Cloud SQL IAM token acquisition for the current principal"));
-        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, SUCCESSFUL,
-                "Use DBCP Verify for the end-to-end database check.");
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testVerifyUsesSqlServiceLoginScope() throws Exception {
-        final GcpCloudSqlIamDatabasePasswordProvider provider = new GcpCloudSqlIamDatabasePasswordProvider();
-        final ConfigurationContext context = mock(ConfigurationContext.class);
-        final PropertyValue credentialsPropertyValue = mock(PropertyValue.class);
-        final PropertyValue databaseTypePropertyValue = mock(PropertyValue.class);
-        final GCPCredentialsService credentialsService = mock(GCPCredentialsService.class);
-        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15)));
-
-        when(context.getProperty(DATABASE_TYPE)).thenReturn(databaseTypePropertyValue);
-        when(databaseTypePropertyValue.asAllowableValue(CloudSqlDatabaseType.class)).thenReturn(CloudSqlDatabaseType.POSTGRESQL);
-        when(context.getProperty(GCP_CREDENTIALS_PROVIDER_SERVICE)).thenReturn(credentialsPropertyValue);
-        when(credentialsPropertyValue.asControllerService(GCPCredentialsService.class)).thenReturn(credentialsService);
-        when(credentialsService.getGoogleCredentials()).thenReturn(rootCredentials);
-
-        final List<ConfigVerificationResult> results = provider.verify(context, mock(ComponentLog.class), Map.of());
-
-        assertEquals(2, results.size());
-        assertEquals(List.of(SQLSERVICE_LOGIN_SCOPE), rootCredentials.getLastRequestedScopes());
-        assertVerificationResult(results.getFirst(), VERIFY_SCOPE_STEP, SUCCESSFUL, "Resolved Database Type PostgreSQL");
-    }
-
-    @ParameterizedTest(name = "verify wording for {0}")
-    @MethodSource("verifySuccessContexts")
-    void testVerifySuccessWordingIsGenericForSelectedDatabaseType(final CloudSqlDatabaseType databaseType,
-                                                                  final GoogleCredentials scopedCredentials,
-                                                                  final String scopeMessage,
-                                                                  final String tokenMessage) throws Exception {
-        if (scopedCredentials instanceof TestScopedGoogleCredentials testScopedGoogleCredentials) {
-            testScopedGoogleCredentials.setRefreshedAccessToken(accessToken(TOKEN_VALUE, 15));
-        }
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, databaseType);
-        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(runner);
-
-        final List<ConfigVerificationResult> results = runner.verify(provider, Map.of());
-
-        assertEquals(2, results.size());
-        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, SUCCESSFUL, "Resolved Database Type %s".formatted(databaseType.getDisplayName()));
-        assertVerificationResult(results.get(0), VERIFY_SCOPE_STEP, SUCCESSFUL, scopeMessage);
-        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, SUCCESSFUL,
-                "Acquired a non-empty Cloud SQL IAM access token for %s".formatted(databaseType.getDisplayName()));
-        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, SUCCESSFUL, tokenMessage);
-        assertVerificationResult(results.get(1), VERIFY_TOKEN_STEP, SUCCESSFUL,
-                "does not connect to the selected database. Use DBCP Verify for the end-to-end database check.");
-    }
-
-    @Test
-    void testChainedControllerServiceResolution() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final RootGoogleCredentials rootCredentials = new RootGoogleCredentials(scopedCredentials);
-        final TestRunner runner = configureRunner(rootCredentials);
-
-        final DatabasePasswordProvider provider = getProvider(runner);
-        final char[] password = provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
     void testFreshTokenDoesNotRefresh() throws Exception {
         final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
+        final DatabasePasswordProvider provider = getProvider(configureRunner(new RootGoogleCredentials(scopedCredentials)));
 
-        final DatabasePasswordProvider provider = getProvider(runner);
-        final char[] password = provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()));
+        final char[] password = provider.getPassword(requestContext());
 
         assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
         assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
@@ -477,10 +325,9 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
     void testExpiredTokenRefreshes() throws Exception {
         final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
         scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
+        final DatabasePasswordProvider provider = getProvider(configureRunner(new RootGoogleCredentials(scopedCredentials)));
 
-        final DatabasePasswordProvider provider = getProvider(runner);
-        final char[] password = provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()));
+        final char[] password = provider.getPassword(requestContext());
 
         assertArrayEquals(REFRESHED_TOKEN_VALUE.toCharArray(), password);
         assertEquals(1, scopedCredentials.getRefreshAccessTokenCount());
@@ -490,8 +337,7 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
     void testConcurrentGetPasswordPerformsSingleRefresh() throws Exception {
         final BlockingScopedGoogleCredentials scopedCredentials = new BlockingScopedGoogleCredentials();
         scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
+        final DatabasePasswordProvider provider = getProvider(configureRunner(new RootGoogleCredentials(scopedCredentials)));
 
         executorService = Executors.newFixedThreadPool(2);
         final CountDownLatch startLatch = new CountDownLatch(1);
@@ -508,637 +354,61 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
     }
 
     @Test
-    void testNullRequestContextRejected() throws Exception {
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15))));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final NullPointerException exception = assertThrows(NullPointerException.class, () -> provider.getPassword(null));
-
-        assertEquals("Database Password Request Context required", exception.getMessage());
-    }
-
-    @Test
-    void testBlankDatabaseUserRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(JDBC_URL, " ", Map.of())));
-
-        assertEquals("Database Username must be configured for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testBlankMySqlDatabaseUserRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(MYSQL_JDBC_URL, " ", MYSQL_DRIVER_CLASS, Map.of())));
-
-        assertEquals("Database Username must be configured for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @ParameterizedTest(name = "accepted sslmode {0} from URL")
-    @MethodSource("acceptedUrlSslModes")
-    void testAcceptedUrlSslModes(final String sslMode) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:postgresql://example:5432/database?sslmode=%s".formatted(sslMode),
-                DATABASE_USER,
-                Map.of("sslmode", "disable")
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testAcceptedCaseInsensitiveUrlSslModeNameAndDecodedValue() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:postgresql://example:5432/database?SslMode=verify%2Dfull",
-                DATABASE_USER,
-                Map.of("sslmode", "disable")
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @ParameterizedTest(name = "accepted sslmode {0} from connection properties")
-    @MethodSource("acceptedPropertySslModes")
-    void testAcceptedConnectionPropertySslModes(final String sslMode) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:postgresql://example:5432/database",
-                DATABASE_USER,
-                Map.of("sslmode", sslMode)
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testAcceptedCaseInsensitiveConnectionPropertyName() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:postgresql://example:5432/database",
-                DATABASE_USER,
-                Map.of("SSLMODE", "require")
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testMissingSslModeRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext("jdbc:postgresql://example:5432/database", DATABASE_USER, Map.of())));
-
-        assertEquals("PostgreSQL sslmode must be configured for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @ParameterizedTest(name = "rejected sslmode {0}")
-    @MethodSource("rejectedSslModeContexts")
-    void testRejectedSslModes(final String jdbcUrl, final Map<String, String> connectionProperties, final String expectedSslMode) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(jdbcUrl, DATABASE_USER, connectionProperties)));
-
-        assertEquals("PostgreSQL sslmode [%s] is not supported for Cloud SQL IAM authentication".formatted(expectedSslMode), exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testUrlSslModeTakesPrecedenceOverConnectionProperties() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:postgresql://example:5432/database?sslmode=require",
-                DATABASE_USER,
-                Map.of("sslmode", "disable")
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testDuplicateUrlSslModeLastInsecureValueRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:postgresql://example:5432/database?sslmode=require&sslmode=disable",
-                        DATABASE_USER,
-                        Map.of("sslmode", "verify-full")
-                )));
-
-        assertEquals("PostgreSQL sslmode [disable] is not supported for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testDuplicateUrlSslModeLastSecureValueAccepted() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:postgresql://example:5432/database?sslmode=disable&sslmode=require",
-                DATABASE_USER,
-                Map.of("sslmode", "disable")
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testMalformedUrlEncodedSslModeValueRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:postgresql://example:5432/database?sslmode=%GG",
-                        DATABASE_USER,
-                        Map.of("sslmode", "require")
-                )));
-
-        assertEquals(MALFORMED_SSLMODE_MESSAGE, exception.getMessage());
-        assertNull(exception.getCause());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMalformedUrlEncodedSslModeNameRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:postgresql://example:5432/database?sslmo%G=require",
-                        DATABASE_USER,
-                        Map.of("sslmode", "require")
-                )));
-
-        assertEquals(MALFORMED_SSLMODE_MESSAGE, exception.getMessage());
-        assertNull(exception.getCause());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @ParameterizedTest(name = "accepted MySQL sslMode {0} from URL")
-    @MethodSource("acceptedMySqlUrlSslModes")
-    void testAcceptedMySqlUrlSslModes(final String sslMode) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:mysql://example:3306/database?sslMode=%s".formatted(sslMode),
-                MYSQL_DATABASE_USER,
-                MYSQL_DRIVER_CLASS,
-                Map.of()
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @ParameterizedTest(name = "accepted MySQL sslMode {0} from connection properties")
-    @MethodSource("acceptedMySqlPropertySslModes")
-    void testAcceptedMySqlConnectionPropertySslModes(final String sslMode) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:mysql://example:3306/database",
-                MYSQL_DATABASE_USER,
-                MYSQL_DRIVER_CLASS,
-                Map.of("sslMode", sslMode)
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testRejectedMySqlCaseInsensitiveUrlSslModeNameAndDecodedValueBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:mysql://example:3306/database?SslMode=verify%5Fidentity",
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of("sslMode", "VERIFY_CA")
-                )));
-
-        assertEquals("MySQL sslMode must be configured as REQUIRED, VERIFY_CA, or VERIFY_IDENTITY for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testRejectedMySqlCaseInsensitiveConnectionPropertyNameBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:mysql://example:3306/database",
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of("SSLMODE", "required")
-                )));
-
-        assertEquals("MySQL sslMode must be configured as REQUIRED, VERIFY_CA, or VERIFY_IDENTITY for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMySqlConnectionPropertiesSslModeTakesPrecedenceOverJdbcUrlBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:mysql://example:3306/database?sslMode=REQUIRED",
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of("sslMode", "DISABLED")
-                )));
-
-        assertEquals("MySQL sslMode must be configured as REQUIRED, VERIFY_CA, or VERIFY_IDENTITY for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMySqlDuplicateUrlSslModeLastInsecureValueRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:mysql://example:3306/database?sslMode=REQUIRED&sslMode=DISABLED",
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of()
-                )));
-
-        assertEquals("MySQL sslMode must be configured as REQUIRED, VERIFY_CA, or VERIFY_IDENTITY for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMySqlDuplicateUrlSslModeLastSecureValueAccepted() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:mysql://example:3306/database?sslMode=PREFERRED&sslMode=VERIFY_CA",
-                MYSQL_DATABASE_USER,
-                MYSQL_DRIVER_CLASS,
-                Map.of()
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testMySqlExactConnectionPropertySslModeOverridesMissingJdbcUrlSslMode() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final char[] password = provider.getPassword(requestContext(
-                "jdbc:mysql://example:3306/database",
-                MYSQL_DATABASE_USER,
-                MYSQL_DRIVER_CLASS,
-                Map.of("sslMode", "VERIFY_CA")
-        ));
-
-        assertArrayEquals(TOKEN_VALUE.toCharArray(), password);
-    }
-
-    @Test
-    void testMissingMySqlSslModeRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext("jdbc:mysql://example:3306/database", MYSQL_DATABASE_USER, MYSQL_DRIVER_CLASS, Map.of())));
-
-        assertEquals("MySQL sslMode must be configured as REQUIRED, VERIFY_CA, or VERIFY_IDENTITY for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @ParameterizedTest(name = "rejected MySQL sslMode case {0}")
-    @MethodSource("rejectedMySqlSslModeContexts")
-    void testRejectedMySqlSslModes(final String jdbcUrl, final Map<String, String> connectionProperties) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(jdbcUrl, MYSQL_DATABASE_USER, MYSQL_DRIVER_CLASS, connectionProperties)));
-
-        assertEquals("MySQL sslMode must be configured as REQUIRED, VERIFY_CA, or VERIFY_IDENTITY for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMalformedUrlEncodedMySqlSslModeValueRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:mysql://example:3306/database?sslMode=%GG",
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of("sslMode", "REQUIRED")
-                )));
-
-        assertEquals(MALFORMED_MYSQL_JDBC_URL_MESSAGE, exception.getMessage());
-        assertNull(exception.getCause());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMalformedUrlEncodedMySqlPropertyNameRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:mysql://example:3306/database?sslMo%G=REQUIRED",
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of()
-                )));
-
-        assertEquals(MALFORMED_MYSQL_JDBC_URL_MESSAGE, exception.getMessage());
-        assertNull(exception.getCause());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @ParameterizedTest(name = "rejected MySQL driver/url case {0}")
-    @MethodSource("rejectedMySqlDriverAndUrlContexts")
-    void testRejectedMySqlDriverAndJdbcUrlBeforeRefresh(final String jdbcUrl,
-                                                        final String driverClassName,
-                                                        final String expectedMessage) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(jdbcUrl, MYSQL_DATABASE_USER, driverClassName, Map.of("sslMode", "REQUIRED"))));
-
-        assertEquals(expectedMessage, exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @ParameterizedTest(name = "rejected MySQL URL credentials case {0}")
-    @MethodSource("rejectedMySqlUrlCredentialContexts")
-    void testMySqlUrlCredentialsRejectedBeforeRefresh(final String jdbcUrl,
-                                                      final String expectedMessage) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(jdbcUrl, MYSQL_DATABASE_USER, MYSQL_DRIVER_CLASS, Map.of("sslMode", "REQUIRED"))));
-
-        assertEquals(expectedMessage, exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMySqlDisabledClearPasswordPluginInConnectionPropertiesRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        MYSQL_JDBC_URL,
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of("disabledAuthenticationPlugins", " sha256_password , MYSQL_CLEAR_PASSWORD ")
-                )));
-
-        assertEquals("MySQL disabledAuthenticationPlugins must not disable the clear-password authentication plugin required for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMySqlDisabledClearPasswordPluginRejectedWhenConfiguredOnlyInJdbcUrl() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:mysql://example:3306/database?sslMode=REQUIRED&disabledAuthenticationPlugins=mysql_clear_password",
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of()
-                )));
-
-        assertEquals("MySQL disabledAuthenticationPlugins must not disable the clear-password authentication plugin required for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMySqlDisabledClearPasswordPluginInJdbcUrlRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        "jdbc:mysql://example:3306/database?sslMode=REQUIRED&disabledAuthenticationPlugins=com.mysql.cj.protocol.a.authentication.MysqlClearPasswordPlugin",
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of("disabledAuthenticationPlugins", "sha256_password")
-                )));
-
-        assertEquals("MySQL disabledAuthenticationPlugins must not disable the clear-password authentication plugin required for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @ParameterizedTest(name = "rejected MySQL legacy TLS property {0}")
-    @MethodSource("rejectedMySqlLegacyTlsPropertyContexts")
-    void testMySqlLegacyTlsPropertiesRejectedBeforeRefresh(final String jdbcUrl,
-                                                           final Map<String, String> connectionProperties) throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(jdbcUrl, MYSQL_DATABASE_USER, MYSQL_DRIVER_CLASS, connectionProperties)));
-
-        assertEquals("MySQL legacy TLS properties useSSL, requireSSL, and verifyServerCertificate are not supported for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testMySqlConnectionPropertyUserRejectedBeforeRefresh() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, -15));
-        scopedCredentials.setRefreshedAccessToken(accessToken(REFRESHED_TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials), true, CloudSqlDatabaseType.MYSQL);
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(
-                        MYSQL_JDBC_URL,
-                        MYSQL_DATABASE_USER,
-                        MYSQL_DRIVER_CLASS,
-                        Map.of("user", "override-user")
-                )));
-
-        assertEquals("MySQL DBCP connection properties must not define user for Cloud SQL IAM authentication", exception.getMessage());
-        assertEquals(0, scopedCredentials.getRefreshAccessTokenCount());
-    }
-
-    @Test
-    void testNullAccessTokenRejected() throws Exception {
+    void testNullAccessTokenRejectedForPasswordGeneration() throws Exception {
         final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(null);
         scopedCredentials.setRefreshedAccessToken(null);
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
+        final DatabasePasswordProvider provider = getProvider(configureRunner(new RootGoogleCredentials(scopedCredentials)));
 
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of())));
+        final ProcessException exception = assertThrows(ProcessException.class, () -> provider.getPassword(requestContext()));
 
-        assertEquals(FAILED_PASSWORD_MESSAGE, exception.getMessage());
+        assertTrue(exception.getMessage().contains("Cloud SQL IAM"));
     }
 
     @Test
-    void testBlankAccessTokenRejected() throws Exception {
+    void testBlankAccessTokenRejectedForPasswordGeneration() throws Exception {
         final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(null);
         scopedCredentials.setRefreshedAccessToken(accessToken(" ", 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
+        final DatabasePasswordProvider provider = getProvider(configureRunner(new RootGoogleCredentials(scopedCredentials)));
 
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of())));
+        final ProcessException exception = assertThrows(ProcessException.class, () -> provider.getPassword(requestContext()));
 
-        assertEquals(FAILED_PASSWORD_MESSAGE, exception.getMessage());
+        assertTrue(exception.getMessage().contains("Cloud SQL IAM"));
     }
 
     @Test
-    void testArbitraryRefreshFailureIsSanitized() throws Exception {
+    void testRefreshFailureIsSanitizedForPasswordGeneration() throws Exception {
         final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(null);
-        scopedCredentials.setRefreshException(ioException(LEAK_SENTINEL, "org.example.CustomCredentials"));
+        scopedCredentials.setRefreshException(ioException(LEAK_SENTINEL));
         final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
         final DatabasePasswordProvider provider = getProvider(runner);
 
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of())));
+        final ProcessException exception = assertThrows(ProcessException.class, () -> provider.getPassword(requestContext()));
 
-        assertEquals(FAILED_PASSWORD_MESSAGE, exception.getMessage());
+        assertTrue(exception.getMessage().contains("Cloud SQL IAM"));
         assertNull(exception.getCause());
-        assertFalse(exception.getMessage().contains(LEAK_SENTINEL));
         assertNoLogMessagesContain(runner.getControllerServiceLogger(PASSWORD_PROVIDER_ID), LEAK_SENTINEL);
     }
 
     @Test
-    void testUnknownGoogleAuthRefreshMessageIsSanitized() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(null);
-        final IOException ioException = ioException(LEAK_SENTINEL, "com.google.auth.oauth2.ImpersonatedCredentials");
-        scopedCredentials.setRefreshException(ioException);
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
+    void testIdentityPoolCredentialsFailClosedAtRuntime() throws Exception {
+        final GcpCloudSqlIamDatabasePasswordProvider provider = getProviderImplementation(
+                configureRunner(new RootGoogleCredentials(new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15)))));
 
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of())));
+        setScopedCredentials(provider, identityPoolCredentials(accessToken(TOKEN_VALUE, 15)));
 
-        assertEquals(FAILED_PASSWORD_MESSAGE, exception.getMessage());
-        assertNull(exception.getCause());
-    }
+        final ProcessException exception = assertThrows(ProcessException.class, () -> provider.getPassword(requestContext()));
 
-    @Test
-    void testGoogleAuthRefreshFailurePreservesCause() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(null);
-        final IOException ioException = ioException("Error requesting access token", "com.google.auth.oauth2.ImpersonatedCredentials");
-        scopedCredentials.setRefreshException(ioException);
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
-
-        final ProcessException exception = assertThrows(ProcessException.class,
-                () -> provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of())));
-
-        assertEquals(FAILED_PASSWORD_MESSAGE, exception.getMessage());
-        assertSame(ioException, exception.getCause());
+        assertTrue(exception.getMessage().contains("Cloud SQL IAM"));
     }
 
     @Test
     void testGetPasswordReturnsFreshCharacterArrayEachCall() throws Exception {
-        final TestScopedGoogleCredentials scopedCredentials = new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15));
-        final TestRunner runner = configureRunner(new RootGoogleCredentials(scopedCredentials));
-        final DatabasePasswordProvider provider = getProvider(runner);
+        final DatabasePasswordProvider provider = getProvider(configureRunner(
+                new RootGoogleCredentials(new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15)))));
 
-        final char[] firstPassword = provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()));
+        final char[] firstPassword = provider.getPassword(requestContext());
         firstPassword[0] = 'X';
-        final char[] secondPassword = provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()));
+        final char[] secondPassword = provider.getPassword(requestContext());
 
         assertNotSame(firstPassword, secondPassword);
         assertArrayEquals(TOKEN_VALUE.toCharArray(), secondPassword);
@@ -1160,109 +430,16 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         try (InputStream inputStream = GcpCloudSqlIamDatabasePasswordProvider.class.getClassLoader().getResourceAsStream(resourcePath)) {
             assertNotNull(inputStream);
             final String additionalDetails = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
-            assertTrue(additionalDetails.contains("Database Type"));
-            assertTrue(additionalDetails.contains("supports Cloud SQL for PostgreSQL and Cloud SQL for MySQL"));
+            assertTrue(additionalDetails.contains("Cloud SQL for PostgreSQL"));
+            assertTrue(additionalDetails.contains("Cloud SQL for MySQL"));
             assertTrue(additionalDetails.contains("roles/iam.workloadIdentityUser"));
-            assertTrue(additionalDetails.contains("must be configured with **Target Service Account**"));
-            assertTrue(additionalDetails.contains("jdbc:postgresql://<HOST>:5432/<DATABASE>?sslmode=require"));
-            assertTrue(additionalDetails.contains("jdbc:mysql://<HOST>:3306/<DATABASE>?sslMode=REQUIRED"));
-            assertTrue(additionalDetails.contains("com.mysql.cj.jdbc.Driver"));
-            assertTrue(additionalDetails.contains("**Verify** checks that NiFi can obtain a token"));
-            assertTrue(additionalDetails.contains("DBCP **Verify** checks the"));
+            assertTrue(additionalDetails.contains("sslmode=require"));
+            assertTrue(additionalDetails.contains("sslMode=REQUIRED"));
+            assertTrue(additionalDetails.contains("DBCP **Verify**"));
+            assertFalse(additionalDetails.contains("Database Type"));
+            assertFalse(additionalDetails.contains("disabledAuthenticationPlugins"));
+            assertFalse(additionalDetails.contains("useSSL"));
         }
-    }
-
-    private static Stream<Arguments> acceptedUrlSslModes() {
-        return Stream.of(
-                Arguments.of("prefer"),
-                Arguments.of("require"),
-                Arguments.of("verify-ca"),
-                Arguments.of("verify-full")
-        );
-    }
-
-    private static Stream<Arguments> acceptedPropertySslModes() {
-        return acceptedUrlSslModes();
-    }
-
-    private static Stream<Arguments> acceptedMySqlUrlSslModes() {
-        return Stream.of(
-                Arguments.of("REQUIRED"),
-                Arguments.of("VERIFY_CA"),
-                Arguments.of("VERIFY_IDENTITY")
-        );
-    }
-
-    private static Stream<Arguments> acceptedMySqlPropertySslModes() {
-        return acceptedMySqlUrlSslModes();
-    }
-
-    private static Stream<Arguments> rejectedSslModeContexts() {
-        return Stream.of(
-                Arguments.of("jdbc:postgresql://example:5432/database?sslmode=disable", Map.of("sslmode", "require"), "disable"),
-                Arguments.of("jdbc:postgresql://example:5432/database?sslmode=allow", Map.of("sslmode", "verify-full"), "allow"),
-                Arguments.of("jdbc:postgresql://example:5432/database", Map.of("sslmode", "disable"), "disable"),
-                Arguments.of("jdbc:postgresql://example:5432/database", Map.of("sslmode", "allow"), "allow")
-        );
-    }
-
-    private static Stream<Arguments> rejectedMySqlSslModeContexts() {
-        return Stream.of(
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED", Map.of("sslMode", "DISABLED")),
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=VERIFY_CA", Map.of("sslMode", "PREFERRED")),
-                Arguments.of("jdbc:mysql://example:3306/database", Map.of("sslMode", "DISABLED")),
-                Arguments.of("jdbc:mysql://example:3306/database", Map.of("sslMode", "PREFERRED"))
-        );
-    }
-
-    private static Stream<Arguments> rejectedMySqlDriverAndUrlContexts() {
-        return Stream.of(
-                Arguments.of(MYSQL_JDBC_URL, POSTGRES_DRIVER_CLASS,
-                        "MySQL driver class must be configured as com.mysql.cj.jdbc.Driver for Cloud SQL IAM authentication"),
-                Arguments.of("jdbc:mariadb://example:3306/database?sslMode=REQUIRED", MYSQL_DRIVER_CLASS,
-                        "MySQL JDBC URL must use the standard single-host jdbc:mysql:// format for Cloud SQL IAM authentication"),
-                Arguments.of("jdbc:mysql://example:3306,demo:3307/database?sslMode=REQUIRED", MYSQL_DRIVER_CLASS,
-                        "MySQL JDBC URL must use the standard single-host jdbc:mysql:// format for Cloud SQL IAM authentication")
-        );
-    }
-
-    private static Stream<Arguments> rejectedMySqlLegacyTlsPropertyContexts() {
-        return Stream.of(
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED&useSSL=false", Map.of()),
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED&requireSSL=true", Map.of()),
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED&verifyServerCertificate=false", Map.of()),
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED", Map.of("useSSL", "false")),
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED", Map.of("requireSSL", "true")),
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED", Map.of("verifyServerCertificate", "false"))
-        );
-    }
-
-    private static Stream<Arguments> rejectedMySqlUrlCredentialContexts() {
-        return Stream.of(
-                Arguments.of("jdbc:mysql://iam-user@example:3306/database?sslMode=REQUIRED",
-                        "MySQL JDBC URL must not define user or password for Cloud SQL IAM authentication"),
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED&user=override-user",
-                        "MySQL JDBC URL must not define user or password for Cloud SQL IAM authentication"),
-                Arguments.of("jdbc:mysql://example:3306/database?sslMode=REQUIRED&password=override-password",
-                        "MySQL JDBC URL must not define user or password for Cloud SQL IAM authentication")
-        );
-    }
-
-    private static Stream<Arguments> verifySuccessContexts() throws IOException {
-        return Stream.of(
-                Arguments.of(
-                        CloudSqlDatabaseType.POSTGRESQL,
-                        new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15)),
-                        "created a Cloud SQL scoped TestScopedGoogleCredentials instance.",
-                        "Cloud SQL IAM token acquisition for the current principal"
-                ),
-                Arguments.of(
-                        CloudSqlDatabaseType.MYSQL,
-                        new TestScopedGoogleCredentials(accessToken(TOKEN_VALUE, 15)),
-                        "created a Cloud SQL scoped TestScopedGoogleCredentials instance.",
-                        "Cloud SQL IAM token acquisition for the current principal"
-                )
-        );
     }
 
     private TestRunner configureRunner(final GoogleCredentials rootCredentials) throws Exception {
@@ -1270,11 +447,6 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
     }
 
     private TestRunner configureRunner(final GoogleCredentials rootCredentials, final boolean enableProvider) throws Exception {
-        return configureRunner(rootCredentials, enableProvider, null);
-    }
-
-    private TestRunner configureRunner(final GoogleCredentials rootCredentials, final boolean enableProvider,
-                                       final CloudSqlDatabaseType databaseType) throws Exception {
         final TestRunner runner = TestRunners.newTestRunner(NoOpProcessor.class);
 
         final TestGCPCredentialsService credentialsService = new TestGCPCredentialsService(rootCredentials);
@@ -1284,9 +456,6 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         final GcpCloudSqlIamDatabasePasswordProvider provider = new GcpCloudSqlIamDatabasePasswordProvider();
         runner.addControllerService(PASSWORD_PROVIDER_ID, provider);
         runner.setProperty(provider, GCP_CREDENTIALS_PROVIDER_SERVICE, CREDENTIALS_SERVICE_ID);
-        if (databaseType != null) {
-            runner.setProperty(provider, DATABASE_TYPE, databaseType.getValue());
-        }
         if (enableProvider) {
             runner.enableControllerService(provider);
             runner.assertValid(provider);
@@ -1305,33 +474,26 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         return (GcpCloudSqlIamDatabasePasswordProvider) getProvider(runner);
     }
 
-    private DatabasePasswordRequestContext requestContext(final String jdbcUrl, final String databaseUser, final Map<String, String> connectionProperties) {
-        return requestContext(jdbcUrl, databaseUser, POSTGRES_DRIVER_CLASS, connectionProperties);
-    }
-
-    private DatabasePasswordRequestContext requestContext(final String jdbcUrl, final String databaseUser,
-                                                          final String driverClassName, final Map<String, String> connectionProperties) {
+    private DatabasePasswordRequestContext requestContext() {
         return DatabasePasswordRequestContext.builder()
-                .jdbcUrl(jdbcUrl)
-                .databaseUser(databaseUser)
-                .driverClassName(driverClassName)
-                .connectionProperties(connectionProperties)
+                .jdbcUrl(JDBC_URL)
+                .databaseUser(DATABASE_USER)
+                .driverClassName(DRIVER_CLASS)
+                .connectionProperties(Map.of())
                 .build();
     }
 
     private char[] getPasswordAfterStart(final DatabasePasswordProvider provider, final CountDownLatch startLatch) throws InterruptedException {
         startLatch.await(5, TimeUnit.SECONDS);
-        return provider.getPassword(requestContext(JDBC_URL, DATABASE_USER, Map.of()));
+        return provider.getPassword(requestContext());
     }
 
     private static AccessToken accessToken(final String tokenValue, final long offsetMinutes) {
         return tokenValue == null ? null : new AccessToken(tokenValue, java.util.Date.from(Instant.now().plusSeconds(offsetMinutes * 60)));
     }
 
-    private static IOException ioException(final String message, final String className) {
-        final IOException ioException = new IOException(message);
-        ioException.setStackTrace(new StackTraceElement[]{new StackTraceElement(className, "refreshAccessToken", "Source.java", 1)});
-        return ioException;
+    private static IOException ioException(final String message) {
+        return new IOException(message);
     }
 
     private static void assertVerificationResult(final ConfigVerificationResult result, final String stepName,
@@ -1384,22 +546,19 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         return (GoogleCredentials) field.get(provider);
     }
 
-    private static CloudSqlDatabaseType getDatabaseType(final GcpCloudSqlIamDatabasePasswordProvider provider) throws ReflectiveOperationException {
-        final Field field = GcpCloudSqlIamDatabasePasswordProvider.class.getDeclaredField("databaseType");
-        field.setAccessible(true);
-        return (CloudSqlDatabaseType) field.get(provider);
-    }
-
-    private static void setScopedCredentials(final GcpCloudSqlIamDatabasePasswordProvider provider, final GoogleCredentials credentials) throws ReflectiveOperationException {
+    private static void setScopedCredentials(final GcpCloudSqlIamDatabasePasswordProvider provider, final GoogleCredentials credentials)
+            throws ReflectiveOperationException {
         final Field field = GcpCloudSqlIamDatabasePasswordProvider.class.getDeclaredField("scopedCredentials");
         field.setAccessible(true);
         field.set(provider, credentials);
     }
 
-    private static void setDatabaseType(final GcpCloudSqlIamDatabasePasswordProvider provider, final CloudSqlDatabaseType configuredDatabaseType) throws ReflectiveOperationException {
-        final Field field = GcpCloudSqlIamDatabasePasswordProvider.class.getDeclaredField("databaseType");
-        field.setAccessible(true);
-        field.set(provider, configuredDatabaseType);
+    @SuppressWarnings("unchecked")
+    private static List<PropertyDescriptor> getSupportedPropertyDescriptors(final GcpCloudSqlIamDatabasePasswordProvider provider)
+            throws ReflectiveOperationException {
+        final Method method = GcpCloudSqlIamDatabasePasswordProvider.class.getDeclaredMethod("getSupportedPropertyDescriptors");
+        method.setAccessible(true);
+        return (List<PropertyDescriptor>) method.invoke(provider);
     }
 
     private static final class TestGCPCredentialsService extends AbstractControllerService implements GCPCredentialsService {
@@ -1462,7 +621,6 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
         private final AtomicInteger refreshAccessTokenCount = new AtomicInteger();
         private volatile AccessToken refreshedAccessToken;
         private volatile IOException refreshException;
-        private volatile RuntimeException runtimeException;
 
         private TestScopedGoogleCredentials(final AccessToken initialAccessToken) {
             super(initialAccessToken);
@@ -1474,9 +632,6 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
             if (refreshException != null) {
                 throw refreshException;
             }
-            if (runtimeException != null) {
-                throw runtimeException;
-            }
             return refreshedAccessToken;
         }
 
@@ -1486,10 +641,6 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
 
         protected void setRefreshException(final IOException refreshException) {
             this.refreshException = refreshException;
-        }
-
-        protected void setRuntimeException(final RuntimeException runtimeException) {
-            this.runtimeException = runtimeException;
         }
 
         protected int getRefreshAccessTokenCount() {
@@ -1504,12 +655,6 @@ class GcpCloudSqlIamDatabasePasswordProviderTest {
     }
 
     private static ImpersonatedCredentials impersonatedCredentials(final IOException exception) throws IOException {
-        final ImpersonatedCredentials credentials = mock(ImpersonatedCredentials.class);
-        when(credentials.refreshAccessToken()).thenThrow(exception);
-        return credentials;
-    }
-
-    private static ImpersonatedCredentials impersonatedCredentials(final RuntimeException exception) throws IOException {
         final ImpersonatedCredentials credentials = mock(ImpersonatedCredentials.class);
         when(credentials.refreshAccessToken()).thenThrow(exception);
         return credentials;
